# wisdomBoard

./: .gitignore  DEVELOPMENT.md  TROUBLESHOOTING.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
public/: tauri-init.js
scripts/: uninstall.ps1  update.ps1
src/: main.ts  overlay.html  panel.html  settings.html  tauri-init.js  webpanel.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  hotkey.rs  input.rs  lib.rs  panel.rs  persistence.rs  state.rs
